--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="" alt="">
   </div>
 
-  <div class="espacio"></div>
+  <!-- <div class="espacio"></div> -->
 
 
   <div class="contenedor-imagen">
